# random-generator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/random_generator/: random_number.py
tests/: test_initalizing_random_generator.py  test_random_generator.py
